@@ -1,4 +1,9 @@
 2006-11-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* src/Win_GParted.cc: fixed bug with copying partition to a disk
+	  without disklabel. Also added some FIXME's.
+	
+2006-11-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Makefile.am,
 	  include/Operation.h,
